fixing the z-index

--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ body {
 
 .box-three p {
   background-color: blue;
-  z-index: 2;
+  z-index: 1;
 }
 
 .box-two p {
@@ -246,11 +246,13 @@ body {
   /* right: 2px; */
   top: 20px;
   cursor: pointer;
-  z-index: -1;
+  z-index: 1;
   border-radius: 10%;
 
 
 }
+
+
 
 .card-out-orange {
   background-color: #FF5C00;
